@@ -64,16 +64,18 @@
 		  "(lilypond-internals.info)")
   "
 
+@c NOTE: This is documentation-generate.scm, not macros.itexi
+
 @ifhtml
 @macro usermanref{NAME}
-@uref{../lilypond/\\NAME\\.html,\\NAME\\}
+@ref{\\NAME\\,,,lilypond}
 @cindex \\NAME\\
 @end macro
 @end ifhtml
 
 @ifinfo
 @macro usermanref{NAME}
-@ref{\\NAME\\,,,lilypond/lilypond}
+@inforef{\\NAME\\,,,lilypond}
 @cindex \\NAME\\
 @end macro
 @end ifinfo
@@ -86,7 +88,7 @@
 
 @ifhtml
 @macro glossaryref{NAME}
-@uref{../music-glossary/\\NAME\\.html,\\NAME\\}
+@ref{\\NAME\\,,,music-glossary}
 @cindex \\NAME\\
 @end macro
 @end ifhtml
@@ -124,7 +126,6 @@
 @file{\\DIR\\/\\NAME\\}@c
 @end macro
 @end iftex
-
 
 
 @ignore
