@@ -1,5 +1,8 @@
 2005-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scm/documentation-generate.scm (string-append): Fix @usermanref,
+	@glossaryref.
+
 	* Documentation/index.html.in: 
 	* Documentation/user/GNUmakefile (depth): Update from 2.5.
 
